-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.6.0
-
4930fbcc1e0693e2bc891f047150a06fb687eaf4
When creating a new Qt Quick2 application the QML debugger does not get enabled by default.
| For Gerrit Dashboard: QTCREATORBUG-8208 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 40338,1 | QML Debugging: Qt Quick 2 Application Wizard | 2.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 48366,3 | Qml Debugging: Default option for Qt Quick application | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |