src/plugins/qmlprojectmanager/qmlproject.cpp
@@ -64,7 +64,7 @@ QmlProject::QmlProject(Internal::Manager *manager, const QString &fileName)
       m_modelManager(QmlJS::ModelManagerInterface::instance())
 {
     setProjectContext(Core::Context(QmlProjectManager::Constants::PROJECTCONTEXT));
-    setProjectLanguage(Core::Context(QmlProjectManager::Constants::LANG_QML));
+    setProjectLanguages(Core::Context(QmlProjectManager::Constants::LANG_QML));
 
     QFileInfo fileInfo(m_fileName);
     m_projectName = fileInfo.completeBaseName();
